--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -3,9 +3,68 @@
 
 <head>
   <%-include('head') %>
+    <script>
+      window.addEventListener("load", async () => {
+        const url = "http://172.16.150.25:8081/api"
+        const config = {
+          method: "GET",
+          headers: {
+            "Content-Type": "application/json",
+          }
+        }
+        const response = await fetch(`${url}/askacademy`, config);
+        const data = await response.json();
+
+        if (response.ok) {
+          const element = document.querySelector("#list");
+          let htmlStr = "";
+          data.AskAcademy_list.forEach(item => {
+            // 希望科目處理
+            const course_list = []
+            item.course_list.forEach(i => {
+              course_list.push(i.course_name);
+            })
+            htmlStr +=
+              `
+            <tr onclick="toNote(${item.id})">
+              <td>${item.id || ""}</td>
+              <td>${item.created_at || ""}</td>
+              <td>${item.student_name || ""}</td>
+              <td>${item.school || ""}</td>
+              <td>家裡：${item.tel || ""} 爸爸：${item.father_mobile || ""} 媽媽：${item.mother_mobile || ""}</td>
+              <td>平日：${item.Weekday_time || ""} 假日：${item.holiday_time || ""}</td>
+              <td>${course_list.join(", ")}</td>
+            </tr>
+            `
+          });
+          element.innerHTML = htmlStr;
+        }
+      })
+
+      function toNote(id) {
+        window.location.href = "admin/note?id=" + id
+      }
+    </script>
 </head>
 
 <body>
+  <div class="container">
+    <h3 class="p-2">問卷紀錄表</h3>
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th>ＩＤ</th>
+          <th>填表日期</th>
+          <th>學生姓名</th>
+          <th>學校</th>
+          <th>聯絡電話</th>
+          <th>可聯絡時間</th>
+          <th>希望科目</th>
+        </tr>
+      </thead>
+      <tbody id="list"></tbody>
+    </table>
+  </div>
 
 </body>
 
