--- a/views/head.ejs
+++ b/views/head.ejs
@@ -14,3 +14,5 @@
   integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 <title></title>
 <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="/javascripts/<%=title %>.js"></script>
+<script type="text/javascript" src="/javascripts/api.js"></script>
