--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,174 +10,6 @@
         white-space: nowrap;
       }
     </style>
-    <script>
-      function setMedia() {
-        const w = window.innerWidth;
-        if (w < 500) {
-          const e = document.querySelectorAll(".input-group");
-          e.forEach((i) => {
-            i.classList.remove("input-group");
-          });
-        }
-      }
-
-      async function submit() {
-        // 基本資料
-        const student_name = document.querySelector("#student_name").value || null;
-        if (!student_name) {
-          alert("請填寫學生姓名");
-          return;
-        }
-        const student_name_en = document.querySelector("#student_name_en").value || null;
-        const student_mobile = document.querySelector("#student_mobile").value || null;
-        const school = document.querySelector("#school").value || null;
-        const grade = document.querySelector("#grade").value || null;
-        const tel = document.querySelector("#tel").value || null;
-        const address = document.querySelector("#address").value || null;
-        const father_name = document.querySelector("#father_name").value || null;
-        const father_mobile = document.querySelector("#father_mobile").value || null;
-        const father_profession = document.querySelector("#father_profession").value || null;
-        const father_office_tel = document.querySelector("#father_office_tel").value || null;
-        const mother_name = document.querySelector("#mother_name").value || null;
-        const mother_mobile = document.querySelector("#mother_mobile").value || null;
-        const mother_profession = document.querySelector("#mother_profession").value || null;
-        const mother_office_tel = document.querySelector("#mother_office_tel").value || null;
-        const holiday_time = document.querySelector("#holiday_time").value || null;
-        const Weekday_time = document.querySelector("#Weekday_time").value || null;
-        const brother1 = document.querySelector("#brother1").value || null;
-        const brother1_grade = document.querySelector("#brother1_grade").value || null;
-        const brother2 = document.querySelector("#brother2").value || null;
-        const brother2_grade = document.querySelector("#brother2_grade").value || null;
-
-        // 興趣班級
-        const course_list_selected = document.querySelectorAll(".course_list");
-        const course_list = [];
-        course_list_selected.forEach((item) => {
-          if (item.checked) {
-            course_list.push({
-              "course_name": item.value || null
-            });
-          }
-        })
-        const course_extend = document.querySelector("#course_extend").value || null;
-
-        // 問班來源
-        const source_list_selected = document.querySelectorAll(".source_list");
-        const source_list = [];
-        source_list_selected.forEach((item) => {
-          if (item.checked) {
-            source_list.push({
-              "source_name": item.value || null
-            });
-          }
-        })
-
-        // 學生狀況
-        const exam_ranking = document.querySelector("#exam_ranking").value || null;
-        const exam_ranking1 = document.querySelector("#exam_ranking1").value || null;
-        const exam_ranking2 = document.querySelector("#exam_ranking2").value || null;
-        const chinese_score = document.querySelector("#chinese_score").value || null;
-        const math_score = document.querySelector("#math_score").value || null;
-        const english_score = document.querySelector("#english_score").value || null;
-        const english_listening = document.querySelector("input[name='english_listening']:checked") ? document.querySelector("input[name='english_listening']:checked").value : null;
-        const enature_score = document.querySelector("#enature_score").value || null;
-        const biology_score = document.querySelector("#biology_score").value || null;
-        const physics_score = document.querySelector("#physics_score").value || null;
-        const chemical_score = document.querySelector("#chemical_score").value || null;
-        const earth_science_score = document.querySelector("#earth_science_score").value || null;
-        const physics_chemical_score = document.querySelector("#physics_chemical_score").value || null;
-        const social_score = document.querySelector("#social_score").value || null;
-        const geography_score = document.querySelector("#geography_score").value || null;
-        const history_score = document.querySelector("#history_score").value || null;
-        const civics_score = document.querySelector("#civics_score").value || null;
-
-        // 課程表
-        const activity_status1 = document.querySelector("#activity_status1").value || null;
-        const activity_status2 = document.querySelector("#activity_status2").value || null;
-        const activity_status3 = document.querySelector("#activity_status3").value || null;
-        const activity_status4 = document.querySelector("#activity_status4").value || null;
-        const activity_status5 = document.querySelector("#activity_status5").value || null;
-        const activity_status6_1 = document.querySelector("#activity_status6_1").value || null;
-        const activity_status6_2 = document.querySelector("#activity_status6_2").value || null;
-        const activity_status6_3 = document.querySelector("#activity_status6_3").value || null;
-        const activity_status7_1 = document.querySelector("#activity_status7_1").value || null;
-        const activity_status7_2 = document.querySelector("#activity_status7_2").value || null;
-        const activity_status7_3 = document.querySelector("#activity_status7_3").value || null;
-        const inquiry_method = document.querySelector("input[name='inquiry_method']:checked") ? document.querySelector("input[name='inquiry_method']:checked").value : null;
-        const reception = document.querySelector("#reception").value || null;
-
-        const info = {
-          student_name,
-          student_name_en,
-          student_mobile,
-          tel,
-          school,
-          grade,
-          address,
-          brother1,
-          brother1_grade,
-          brother2,
-          brother2_grade,
-          father_name,
-          father_mobile,
-          father_office_tel,
-          father_profession,
-          mother_name,
-          mother_mobile,
-          mother_office_tel,
-          mother_profession,
-          holiday_time,
-          Weekday_time,
-          // Remark,
-          course_extend,
-          exam_ranking,
-          exam_ranking1,
-          exam_ranking2,
-          chinese_score,
-          math_score,
-          english_score,
-          english_listening,
-          enature_score,
-          biology_score,
-          physics_score,
-          chemical_score,
-          earth_science_score,
-          physics_chemical_score,
-          social_score,
-          geography_score,
-          history_score,
-          civics_score,
-          activity_status1,
-          activity_status2,
-          activity_status3,
-          activity_status4,
-          activity_status5,
-          activity_status6_1,
-          activity_status6_2,
-          activity_status6_3,
-          activity_status7_1,
-          activity_status7_2,
-          activity_status7_3,
-          inquiry_method,
-          reception,
-          course_list,
-          source_list
-        }
-
-        const url = "http://172.16.150.25:8081/api"
-        const config = {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify(info)
-        }
-        const response = await fetch(`${url}/askacademy`, config);
-        if (response.ok) {
-          window.location.reload()
-        }
-      }
-    </script>
     <title>問班表格</title>
 </head>
 
@@ -192,13 +24,15 @@
         <input type="text" aria-label="student_name" id="student_name" class="form-control" />
         <span class="input-group-text">英文名子</span>
         <input type="text" aria-label="student_name_en" id="student_name_en" class="form-control" />
+      </div>
+      <div class="input-group p-1">
         <span class="input-group-text">學生手機</span>
         <input type="text" aria-label="student_mobile" id="student_mobile" class="form-control" />
       </div>
       <div class="input-group p-1">
         <span class="input-group-text">就讀學校</span>
         <input type="text" aria-label="school" id="school" class="form-control" />
-        <span class="input-group-text">年級</span>
+        <label class="input-group-text" for="grade">年級</label>
         <select class="form-select" id="grade">
           <option value=""></option>
           <option value="幼大班">幼大班</option>
@@ -227,7 +61,9 @@
         <input type="text" aria-label="father_name" id="father_name" class="form-control" />
         <span class="input-group-text">連絡電話</span>
         <input type="text" aria-label="father_mobile" id="father_mobile" class="form-control" />
-        <span class="input-group-text">職業</span>
+      </div>
+      <div class="input-group p-1">
+        <span class="input-group-text">父親職業</span>
         <input type="text" aria-label="father_profession" id="father_profession" class="form-control" />
         <span class="input-group-text">公司電話</span>
         <input type="text" aria-label="father_office_tel" id="father_office_tel" class="form-control" />
@@ -237,7 +73,9 @@
         <input type="text" aria-label="mother_name" id="mother_name" class="form-control" />
         <span class="input-group-text">連絡電話</span>
         <input type="text" aria-label="mother_mobile" id="mother_mobile" class="form-control" />
-        <span class="input-group-text">職業</span>
+      </div>
+      <div class="input-group p-1">
+        <span class="input-group-text">母親職業</span>
         <input type="text" aria-label="mother_profession" id="mother_profession" class="form-control" />
         <span class="input-group-text">公司電話</span>
         <input type="text" aria-label="mother_office_tel" id="mother_office_tel" class="form-control" />
@@ -283,6 +121,14 @@
             <input class="form-check-input course_list" type="checkbox" value="地科" id="class_earthScience" />
             <label class="form-check-label" for="class_earthScience"> 地科 </label>
           </div>
+          <div class="nowrap">
+            <input class="form-check-input course_list" type="checkbox" value="自然" id="class_science" />
+            <label class="form-check-label" for="class_science"> 自然 </label>
+          </div>
+          <div class="nowrap">
+            <input class="form-check-input course_list" type="checkbox" value="理化" id="class_physics" />
+            <label class="form-check-label" for="class_physics"> 理化 </label>
+          </div>
         </div>
         <span class="input-group-text">其他</span>
         <input id="course_extend" type="text" aria-label="class_other" class="form-control" />
@@ -293,7 +139,7 @@
           <div class="input-group p-1">
             <span class="input-group-text">兄姐姓名</span>
             <input type="text" aria-label="brother1" id="brother1" class="form-control" />
-            <span class="input-group-text">年級</span>
+            <label class="input-group-text" for="brother1_grade">年級</label>
             <select class="form-select" id="brother1_grade">
               <option value=""></option>
               <option value="幼大班">幼大班</option>
@@ -314,7 +160,7 @@
           <div class="input-group p-1">
             <span class="input-group-text">弟妹姓名</span>
             <input type="text" aria-label="brother2" id="brother2" class="form-control" />
-            <span class="input-group-text">年級</span>
+            <label class="input-group-text" for="brother2_grade">年級</label>
             <select class="form-select" id="brother2_grade">
               <option value=""></option>
               <option value="幼大班">幼大班</option>
@@ -411,6 +257,8 @@
       <div class="input-group p-1">
         <span class="input-group-text">段考校排</span>
         <input type="text" aria-label="exam_ranking" id="exam_ranking" class="form-control" />
+      </div>
+      <div class="input-group p-1">
         <span class="input-group-text">模擬考校排</span>
         <input type="text" aria-label="exam_ranking1" id="exam_ranking1" class="form-control" />
         <span class="input-group-text">模擬考區排</span>
@@ -421,13 +269,15 @@
         <input type="text" aria-label="chinese_score" id="chinese_score" class="form-control" />
         <span class="input-group-text">數學成績</span>
         <input type="text" aria-label="math_score" id="math_score" class="form-control" />
+      </div>
+      <div class="input-group p-1">
         <span class="input-group-text">英文成績</span>
         <input type="text" aria-label="english_score" id="english_score" class="form-control" />
         <span class="input-group-text">英聽成績</span>
         <div class="form-control">
           <div class="nowrap">
             <input class="form-check-input" type="radio" name="english_listening" value="3"
-              id="english_listening_good" />
+                   id="english_listening_good" />
             <label class="form-check-label" for="english_listening_good">
               強
             </label>
@@ -440,7 +290,7 @@
           </div>
           <div class="nowrap">
             <input class="form-check-input" type="radio" name="english_listening" value="1"
-              id="english_listening_bad" />
+                   id="english_listening_bad" />
             <label class="form-check-label" for="english_listening_bad">
               弱
             </label>
@@ -452,10 +302,14 @@
         <input type="text" id="enature_score" aria-label="enature_score" class="form-control" />
         <span class="input-group-text">生物成績</span>
         <input type="text" id="biology_score" aria-label="biology_score" class="form-control" />
+      </div>
+      <div class="input-group p-1">
         <span class="input-group-text">物理成績</span>
         <input type="text" id="physics_score" aria-label="physics_score" class="form-control" />
         <span class="input-group-text">化學成績</span>
         <input type="text" id="chemical_score" aria-label="chemical_score" class="form-control" />
+      </div>
+      <div class="input-group p-1">
         <span class="input-group-text">地科成績</span>
         <input type="text" id="earth_science_score" aria-label="earth_science_score" class="form-control" />
         <span class="input-group-text">理化成績</span>
@@ -466,6 +320,8 @@
         <input type="text" id="social_score" aria-label="social_score" class="form-control" />
         <span class="input-group-text">地理成績</span>
         <input type="text" id="geography_score" aria-label="geography_score" class="form-control" />
+      </div>
+      <div class="input-group p-1">
         <span class="input-group-text">歷史成績</span>
         <input type="text" id="history_score" aria-label="history_score" class="form-control" />
         <span class="input-group-text">公民成績</span>
@@ -477,10 +333,14 @@
         <input type="text" id="activity_status1" aria-label="activity_status1" class="form-control" />
         <span class="input-group-text">星期二</span>
         <input type="text" id="activity_status2" aria-label="activity_status2" class="form-control" />
+      </div>
+      <div class="input-group p-1">
         <span class="input-group-text">星期三</span>
         <input type="text" id="activity_status3" aria-label="activity_status3" class="form-control" />
         <span class="input-group-text">星期四</span>
         <input type="text" id="activity_status4" aria-label="activity_status4" class="form-control" />
+      </div>
+      <div class="input-group p-1">
         <span class="input-group-text">星期五</span>
         <input type="text" id="activity_status5" aria-label="activity_status5" class="form-control" />
       </div>
@@ -489,12 +349,14 @@
         <input type="text" id="activity_status6_1" aria-label="activity_status6_1" class="form-control" />
         <span class="input-group-text">星期六-中</span>
         <input type="text" id="activity_status6_2" aria-label="activity_status6_2" class="form-control" />
-        <span class="input-group-text">星期六-晚</span>
-        <input type="text" id="activity_status6_3" aria-label="activity_status6_3" class="form-control" />
       </div>
       <div class="input-group p-1">
+        <span class="input-group-text">星期六-晚</span>
+        <input type="text" id="activity_status6_3" aria-label="activity_status6_3" class="form-control" />
         <span class="input-group-text">星期日-早</span>
         <input type="text" id="activity_status7_1" aria-label="activity_status7_1" class="form-control" />
+      </div>
+      <div class="input-group p-1">
         <span class="input-group-text">星期日-中</span>
         <input type="text" id="activity_status7_2" aria-label="activity_status7_2" class="form-control" />
         <span class="input-group-text">星期日-晚</span>
@@ -534,6 +396,8 @@
             </label>
           </div>
         </div>
+      </div>
+      <div class="input-group p-1">
         <span class="input-group-text">接待老師</span>
         <input type="text" aria-label="reception" id="reception" class="form-control" />
       </div>
