--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
         </select>
       </div>
       <div class="input-group p-1">
-        <span class="input-group-text">市話</span>
+        <span class="input-group-text">聯絡電話</span>
         <input type="text" aria-label="tel" id="tel" class="form-control" />
         <span class="input-group-text">地址</span>
         <input type="text" aria-label="address" id="address" class="form-control" />
