--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,7 @@
                     <span class="input-group-text">登入密碼</span>
                     <input type="text" aria-label="student_name" id="student_name" class="form-control" />
                 </div>
-                <botton href="#" class="btn btn-primary">登入</botton>
+                <button class="btn btn-primary" onclick="login()">登入</button>
             </div>
         </div>
     </div>
