--- a/views/askclass.ejs
+++ b/views/askclass.ejs
@@ -7,12 +7,15 @@
 
 <body>
   <%-include('header') %>
-    <div class="container">
+    <div class="container px-5">
       <h3 class="p-2">問卷紀錄表</h3>
-      <div class="d-flex" role="search">
-        <input id="dateStatr" class="form-control me-1" type="date" placeholder="搜尋：學生姓名，家長姓名，學校" aria-label="start">
-        <input id="dateEnd" class="form-control me-1" type="date" placeholder="搜尋：學生姓名，家長姓名，學校" aria-label="end">
-        <input id="keyword" class="form-control me-1" type="search" placeholder="搜尋：學生姓名，家長姓名，學校" aria-label="Search">
+      <div class="input-group" role="search">
+        <span class="input-group-text">起始</span>
+        <input id="dateStatr" class="form-control" type="date" aria-label="start">
+        <span class="input-group-text">結束</span>
+        <input id="dateEnd" class="form-control" type="date" aria-label="end">
+        <span class="input-group-text">搜尋</span>
+        <input id="keyword" class="form-control" type="search" placeholder="姓名、電話" aria-label="Search">
         <button class="btn btn-outline-success text-nowrap" type="submit" onclick="searchAskacademy()">搜尋</button>
       </div>
       <table class="table table-striped table-hover">
@@ -30,7 +33,6 @@
         <tbody id="list"></tbody>
       </table>
     </div>
-
 </body>
 
 </html>
