--- a/views/askclass.ejs
+++ b/views/askclass.ejs
@@ -21,13 +21,13 @@
       <table class="table table-striped table-hover">
         <thead>
           <tr>
-            <th class="nowrap">ＩＤ</th>
-            <th class="nowrap">填表日期</th>
-            <th class="nowrap">學生姓名</th>
-            <th class="nowrap">學校</th>
-            <th class="nowrap">聯絡電話</th>
-            <th class="nowrap">可聯絡時間</th>
-            <th class="nowrap">希望科目</th>
+            <!-- <th class="nowrap">ＩＤ</th> -->
+            <th class="nowrap w-10">填表日期</th>
+            <th class="nowrap w-10">學生姓名</th>
+            <th class="nowrap w-15">學校</th>
+            <th class="nowrap w-30">聯絡電話</th>
+            <th class="nowrap w-20">可聯絡時間</th>
+            <th class="nowrap w-15">希望科目</th>
           </tr>
         </thead>
         <tbody id="list"></tbody>
